# dice-to-key

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  save-file.cpp  save-file.h  util.cpp  util.h
